--- a/daysOfCode.css
+++ b/daysOfCode.css
@@ -7,3 +7,14 @@ img {
     border:0 none;
     outline:0;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+body
+{
+    background-color: black; /* background */
+    color: white; /* text */
+}
