--- a/daysOfCode.css
+++ b/daysOfCode.css
@@ -7,7 +7,8 @@ img {
     border:0 none;
     outline:0;
 }
-.center {
+.center 
+{
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -17,4 +18,18 @@ body
 {
     background-color: black; /* background */
     color: white; /* text */
+}
+
+h1{
+  font-family: VT323; 
+  font-size: 50px;
+  text-align: center;
+}
+
+.content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
