--- a/daysOfCode.css
+++ b/daysOfCode.css
@@ -28,8 +28,13 @@ h1{
 
 .content {
   position: absolute;
-  left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
+  left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.inputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
