--- a/daysOfCode.css
+++ b/daysOfCode.css
@@ -2,10 +2,17 @@
   Element Styles
 ==================================== */
 img {
-    max-width: 70%;
+    max-width: 100%;
     height: auto;
     border: black;
     outline:0;
+}
+.photo {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .center 
 {
